fix: broken tests as a results of implementation changes